--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,28 @@
-@import '~bootstrap/scss/bootstrap'
+@import '~bootstrap/scss/bootstrap';
+
+body {
+    background-color: bisque;
+}
+
+main {
+    height: 80vh;
+}
+
+ul {
+    list-style: none;
+    padding-top: 2rem;
+}
+
+a {
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: black;
+}
+
+.active a {
+    color: blue;
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 1rem;
+    background-color: white;
+}
